@@ -1,3 +1,6 @@
+20220629:
+ * fixed a bug in version comparison (converting string to int)
+
 20220628:
  * fixed local_env with deps
 
